fixed overflow

--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -140,7 +140,7 @@
     justify-content: center;
     align-items: center;
     img{
-        width: 100vw;
+        width: 98.9vw;
     }
     @media screen and (max-width: 768px) {
         img{
